force-app/main/default/objects/MaintenancePlan/fields/SVMXA360__CanceledOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CanceledOn__c</fullName>
    <description>This field indicates the date on which this Maintenance Plan was canceled.</description>
    <inlineHelpText>This field indicates the date on which this Maintenance Plan was canceled.</inlineHelpText>
    <label>Canceled On</label>
    <type>Date</type>
</CustomField>