force-app/main/default/objects/MaintenancePlan/fields/SVMXA360__MaintenancePlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Maintenance Plan Template associated with the Maintenance Plan. This template&apos;s information was utilized during the creation of the Maintenance Plan and associated records.</description>
    <inlineHelpText>The Maintenance Plan Template associated with the Maintenance Plan. This template&apos;s information was utilized during the creation of the Maintenance Plan and associated records.</inlineHelpText>
    <label>Maintenance Plan Template</label>
    <referenceTo>SVMXA360__MaintenancePlanTemplate__c</referenceTo>
    <relationshipLabel>Maintenance Plans</relationshipLabel>
    <relationshipName>Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>