force-app/main/default/objects/MaintenancePlan/fields/SVMXA360__SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_Status__c</fullName>
    <description>This field indicates the Status of the Maintenance Plan.</description>
    <inlineHelpText>This field indicates the Status of the Maintenance Plan.</inlineHelpText>
    <label>Maintenance Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>