force-app/main/default/objects/MaintenancePlan/fields/SVMXA360__Source__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Source__c</fullName>
    <description>Indicates the source object that is used to create this Maintenance Plan.</description>
    <inlineHelpText>Indicates the source object that is used to create this Maintenance Plan.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>ServiceContract</fullName>
                <label>Service Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>